--- a/Dingel_John.css
+++ b/Dingel_John.css
@@ -10,12 +10,6 @@ h1 {
         }
 
     .button {
-        background-color:black;
-        border:pink
-        color: white;
-    }
-
-    .button {
         background-color: black;
         color: white;
         box-shadow: 10px 10px 20px 20px
@@ -23,14 +17,43 @@ h1 {
     }
        h3 {
            font-family:helvetica;
-           color:rgb(225, 0, 255);
+           color:rgb(169, 112, 177);
            box-shadow: 20px 10px 5px rgb(255, 18, 196):
            border-radius: 5px;
-           
+           opacity: .75;
+       }
+       .Floyd {
+           color: red;
+           margin: 10px;
+           padding: 10px;
+           background-color: rgb(179, 131, 44);
+           font-size: 80px;
+           opacity: 0.6;
 
        }
-       floyd {
-           font-family:courier;
-           padding: 50px;
-           background-color: pink;
+       .Pink {
+           color: yellow;
        }
+       .catch {
+           color: green;
+           opacity: 0.5;
+       }
+       .songs {
+           color:blue;
+           opacity:.35;
+       }
+       .sockeye {
+           color:indigo
+           opacity:.5;
+           
+       }
+       .ol {
+           color:rgb(101, 193, 255);
+           font-size:40px;
+       }
+       .quintin {
+           color:hotpink;
+           box-shadow: 10px 15px;
+           font-size:40px;
+       }
+           
